hotdog-api/api.deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: hotdog-deployment
spec:
  selector:
    matchLabels:
      app: hotdog-api
  replicas: 3
  template:
    metadata:
      labels:
        app: hotdog-api
    spec:
      containers:
      - name: hotdog-api
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: server
        - containerPort: 8081
          name: management
