hotdog-api/api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hotdog-api-service
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hotdog-api
  type: NodePort
